--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,9 +21,10 @@ environment:
   sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
+  cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.2
+  percent_indicator: ^3.0.1
   slider_button: ^1.0.0
 
 dev_dependencies:
@@ -43,6 +44,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - images/
+    # - images/foldericon.jpg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
   # For details regarding adding assets from package dependencies, see
